Allow HTSYSMENU on windows with icons.

Bug: 850573
Test: Open a popup window (e.g. using popuptest.com); double-clicking the window icon should close the window
Change-Id: Iec6b2d192502557f1e95ade99c204a6db58dfff6
Reviewed-on: https://chromium-review.googlesource.com/1136059
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574838}
Former-commit-id: 48f1df1b6f238a42a82110545b06a748bccb20ae